Remove node_modules and database, fix deployment

--- a/public/i18n/am.json
+++ b/public/i18n/am.json
@@ -13,6 +13,7 @@
   "filters.apply": "ተግብር",
   "filters.bedrooms": "መኝታ ክፍሎች",
   "about.title": "ስለ እኛ",
+  "about.content": "በከተማዎ ውስጥ ምርጥ ለሽያጭ የሚቀርቡ ንብረቶችን እንዲያገኙ በታማኝነት እናግዞታለን። ዝርዝራችን በየቀኑ የሚታደስ እና አስተማማኝ ነው። በፍጥነት እና በቀላል መንገድ የምናልመዉን ቤት እንዲያገኙ ብቁ ከተሟላ የቡድን አባላት ጋር እንሰራለን።",
   "contact.title": "አግኙን",
   "footer.copyright": "የንብረት ወኪል። መብቶች በሙሉ የተጠበቁ ናቸው።",
   "admin.panel": "የአድሚን ፓነል",
@@ -29,14 +30,14 @@
   "type.house": "ቤት",
   "type.apartment": "አፓርታማ",
   "type.land": "መሬት",
-  "type.properties": "ንብረቶች",
+  "type.properties": "ንብረት",
   "type.car": "መኪና",
   "label.bedrooms": "መኝታ ክፍሎች",
   "label.square_meter": "ካሬ ሜትር",
   "label.type": "አይነት",
   "property.description": "መግለጫ",
   "property.amenities": "አገልግሎቶች",
-  "property.contact": "ርክብ",
+  "property.contact": "ኣግኙን",
   "property.call": "ደውል",
   "property.whatsapp": "ዋትስአፕ",
   "property.email": "ኢሜይል",
