--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -13,6 +13,7 @@
   "filters.apply": "Apply",
   "filters.bedrooms": "Bedrooms",
   "about.title": "About Us",
+  "about.content": "We help you find the best properties for sale in your city. Our listings are updated daily and verified for your peace of mind. With a dedicated team and a passion for service, we make your property search journey smooth and enjoyable.",
   "contact.title": "Contact Us",
   "footer.copyright": "Property Brokerage. All rights reserved.",
   "admin.panel": "Admin Panel",
@@ -30,6 +31,7 @@
   "type.apartment": "Apartment",
   "type.land": "Land",
   "type.properties": "Properties",
+  "type.all": "All",
   "type.car": "Car",
   "label.bedrooms": "Bedrooms",
   "label.square_meter": "Square Meter",
