--- a/public/i18n/ti.json
+++ b/public/i18n/ti.json
@@ -13,6 +13,7 @@
   "filters.all": "ኩሉ",
   "filters.bedrooms": "ክፍሊ መደቀሲ",
   "about.title": "ብዛዕባና",
+  "about.content": "ኣብ ከተማኹም ዘለዉ ብሉጻት ዝሽጡ ንብረታት ንክረኽቡ ንሕግዘኩም። ዝርዝርና መዓልታዊ ይሕደሱ ከምኡውን ንሰላምኩም ዝተረጋገጹ እዮም። ብዝተወፈየ ጉጅለናን ንኣገልግሎት ዘለና ኒሕን፣ ናይ ንብረት ምድላይ ጉዞኹም ቅልጡፍን ደስ ዘብልን ንገብሮ።",
   "contact.title": "ርከቡና",
   "footer.copyright": "ድለላ ንብረት። ኩሉ መልእኽቲ መርሓት ዝተጠቐመ እዩ።",
   "admin.panel": "ፓነል ኣድሚን",
@@ -26,10 +27,10 @@
   "amenity.lift": "ሊፍት / ኤሌቨተር",
   "amenity.yes": "እወ፣ ኣለዎ",
   "label.location": "ኣድራሻ",
-  "type.house": "ቤት",
+  "type.house": "ገዛ",
   "type.apartment": "አፓርታማ",
   "type.land": "መሬት",
-  "type.properties": "ንብረታት",
+  "type.properties": "ንብረት",
   "type.car": "መኪና",
   "label.bedrooms": "ክፍሊ መደቀሲ",
   "label.square_meter": "ካሬ ሜትር",
